# royofinance

./: DEVOPS.md  README.md  pyproject.toml
docker/: compose.yml  init.sql
postgres/accounts/logic/: deposit_money.sql  send_money.sql  withdraw_money.sql  zakaat.sql
postgres/accounts/rls/: user_accounts_rls.sql
postgres/accounts/schema/: user_accounts_schema.sql
postgres/accounts/triggers/: triggers.sql
postgres/branches/rls/: bank_branches_rls.sql
postgres/branches/schema/: banks_branches_schema.sql
postgres/cities/: migrating_cities.sql
postgres/indexes/: indexes.sql
postgres/loan_system/logic/: loan_payment.sql  loan_request_approval.sql
postgres/loan_system/rls/: rls.sql
postgres/loan_system/schema/: schema.sql
postgres/loan_system/views/: admins_view_user_info.sql  user_active_loan_payments.sql
postgres/user_auth/logic/: login.sql  user_auth_password_set.sql  user_auth_role_allactor.sql
postgres/user_auth/rls/: users_auth_rls.sql
postgres/user_auth/schema/: migrations.sql  users_auth_schema.sql
postgres/user_info/rls/: user_info_rls.sql
postgres/user_info/schema/: user_info_schema.sql
src/: app.py  database_driver.py  okay.py
tests/: jwt_test.py
